# eqxvision

./: .gitignore  .pre-commit-config.yaml  Adversarial_Attack.ipynb  FCN_Segmentation.ipynb  LICENSE  LICENSE.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  run_test.yml
docs/: comparison.md  index.md  requirements.txt
docs/_static/: custom_css.css  mathjax.js
docs/api/: experimental.md  utils.md
docs/api/layers/: activation.md  chain.md  conv_norm_act.md  drop_path.md  extensions_2d.md  layers.md  mlp.md  patch.md  squeeze.md
docs/api/models/classification/: alexnet.md  convnext.md  densenet.md  efficientnet.md  efficientnet_v2.md  googlenet.md  mobilenetv2.md  mobilenetv3.md  regnets.md  resnets.md  shufflenetv2.md  squeeze.md  swin.md  swin_v2.md  vgg.md  vit.md
docs/api/models/segmentation/: deeplabv3.md  fcn.md  lraspp.md
docs/getting_started/: Adversarial_Attack.ipynb  FCN_Segmentation.ipynb  Self-Attention Maps.ipynb  Transfer Learning.ipynb  Transfer_Learning.ipynb  vgg_finetune.ipynb  vit_attention.ipynb
eqxvision/: __init__.py  experimental.py  utils.py
eqxvision/layers/: __init__.py  activations.py  chain.py  conv_norm_activation.py  drop_path.py  extensions_2d.py  mlps.py  patch_embed.py  squeeze.py
eqxvision/models/: __init__.py
eqxvision/models/classification/: __init__.py  alexnet.py  convnext.py  densenet.py  efficientnet.py  googlenet.py  mobilenetv2.py  mobilenetv3.py  regnet.py  resnet.py  shufflenetv2.py  squeezenet.py  swin.py  vgg.py  vgg16.py  vit.py
eqxvision/models/segmentation/: __init__.py  _utils.py  deeplabv3.py  fcn.py  lraspp.py
tests/: conftest.py  test_grads.py  test_layers.py  test_weight_loading.py
tests/static/: alexnet.pred.pth  convnext_tiny.pred.pth  densenet121.pred.pth  efficientnet_b0.pred.pth  efficientnet_v2_s.pred.pth  googlenet.pred.pth  mobilenet_v2.pred.pth  mobilenet_v3_small.pred.pth  regnet_x_400mf.pred.pth  regnet_y_400mf.pred.pth  resnet18.pred.pth  shufflenet_v2_x0_5.pred.pth  squeezenet1_0.pred.pth  swin_t.pred.pth  vgg11.pred.pth  vgg11_bn.pred.pth
tests/test_models/: test_alexnet.py  test_convnext.py  test_deeplabv3.py  test_densenet.py  test_densenets.py  test_efficientnet.py  test_fcn.py  test_googlenet.py  test_lraspp.py  test_mobilenetv2.py  test_mobilenetv3.py  test_regnet.py  test_resnet.py  test_shufflenetv2.py  test_squeezenet.py  test_swin.py  test_vgg.py  test_vit.py
