[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "eqxvision"
authors = [{name = "Contributing Authors", email = "aditya.91.singh@gmail.com"}]
dynamic = ["version", "description"]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies=[
    'equinox',
    'jax',
    'jaxlib',
    "torch >=1.7.1",
    "torchvision >=0.10.0"
]

[project.urls]
"Homepage" = "https://github.com/paganpasta/eqxvision"
"Bug Tracker" = "https://github.com/paganpasta/eqxvision/issues"

[project.optional-dependencies]
test = [
    "pre-commit",
    "bluepy",
    "pytest",
    "torch >=1.7.1",
    "torchvision >=0.10.0"
]

docs=[
    "jinja2==3.0.3",
    "Markdown>=3.3",
    "MarkupSafe>=1.1",
    "mkdocs>=1.2",
    "mkdocs-autorefs>=0.3.1",
    "pymdown-extensions>=6.3",
    "mkdocs==1.3.0",
    "mkdocs-autorefs",
    "mkdocs_include_exclude_files==0.0.1",
    "mkdocs-material==7.3.6",
    "mkdocs-material-extensions",
    "mkdocstrings==0.17.0",
    "mkdocstrings-python",
    "mkdocstrings-python-legacy",
    "mknotebooks==0.7.1",
    "pymdown-extensions==9.4",
    "pytkdocs_tweaks==0.0.5",
]

[project.scripts]
flit = "flit:main"